Revise physics codes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,13 +147,13 @@ if (USE_CAM AND DEFINED ENV{PIO_ROOT})
   set(HAS_PIO TRUE)
   include_directories("$ENV{PIO_ROOT}/include")
   link_directories("$ENV{PIO_ROOT}/lib")
-  list(APPEND EXTERNAL_LIBS piof pioc)
+  list(APPEND EXTERNAL_LIBS piof)
 endif ()
 
 if (DEFINED ENV{LAPACK} AND (NOT DEFINED ENV{LAPACK_ROOT}))
   set(ENV{LAPACK_ROOT} $ENV{LAPACK})
 endif ()
-if (USE_CAM AND DEFINED ENV{LAPACK_ROOT})
+if (DEFINED ENV{LAPACK_ROOT})
   message(STATUS "Found LAPACK in $ENV{LAPACK_ROOT}.")
   add_definitions(-DHAS_LAPACK)
   set(HAS_LAPACK TRUE)
@@ -165,7 +165,7 @@ endif ()
 if (DEFINED ENV{ESMF} AND (NOT DEFINED ENV{ESMF_ROOT}))
   set(ENV{ESMF_ROOT} $ENV{ESMF})
 endif ()
-if (USE_CAM AND HAS_LAPACK AND DEFINED ENV{ESMF_ROOT})
+if (HAS_LAPACK AND DEFINED ENV{ESMF_ROOT})
   message(STATUS "Found ESMF in $ENV{ESMF_ROOT}.")
   add_definitions(-DHAS_ESMF)
   set(HAS_ESMF TRUE)
@@ -177,7 +177,7 @@ endif ()
 if (DEFINED ENV{MCT} AND (NOT DEFINED ENV{MCT_ROOT}))
   set(ENV{MCT_ROOT} $ENV{MCT})
 endif ()
-if (USE_CAM AND DEFINED ENV{MCT_ROOT})
+if (DEFINED ENV{MCT_ROOT})
   message(STATUS "Found MCT in $ENV{MCT_ROOT}.")
   add_definitions(-DHAS_MCT)
   set(HAS_MCT TRUE)
@@ -451,7 +451,7 @@ target_link_libraries(gmcore_driver.exe gmcore)
 add_executable(gmcore_adv_driver.exe src/drivers/gmcore_adv_driver.F90)
 target_link_libraries(gmcore_adv_driver.exe gmcore)
 
-if (HAS_ESMF)
+if (HAS_ESMF AND USE_CAM)
   add_subdirectory(src/components/lnd/clm)
 
   add_executable(gmcore_esmf_driver.exe
