Add more codes of IEVA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ project(gmcore LANGUAGES Fortran C)
 option(R4 "Use single precision" OFF)
 option(R16 "Use quadruple precision" OFF)
 option(ENSURE_ORDER "Ensure computation order in parallel" OFF)
+option(USE_GPTL "Use GPTL to profile performance" OFF)
 option(USE_BULK_AERO "Use bulk aerosol model" ON)
 option(USE_MODAL_AERO "Use modal aerosol model" OFF)
 option(USE_CHEM "Use chemistry" OFF)
@@ -117,7 +118,7 @@ set(EXTERNAL_LIBS netcdff netcdf)
 if (DEFINED ENV{GPTL} AND (NOT DEFINED ENV{GPTL_ROOT}))
   set(ENV{GPTL_ROOT} $ENV{GPTL})
 endif ()
-if (DEFINED ENV{GPTL_ROOT})
+if (USE_GPTL AND DEFINED ENV{GPTL_ROOT})
   message(STATUS "Found GPTL in $ENV{GPTL_ROOT}.")
   add_definitions(-DHAS_GPTL)
   set(HAS_GPTL TRUE)
