--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,7 +148,7 @@ if (USE_CAM AND DEFINED ENV{PIO_ROOT})
   set(HAS_PIO TRUE)
   include_directories("$ENV{PIO_ROOT}/include")
   link_directories("$ENV{PIO_ROOT}/lib")
-  list(APPEND EXTERNAL_LIBS piof)
+  list(APPEND EXTERNAL_LIBS piof pioc)
 endif ()
 
 if (DEFINED ENV{LAPACK} AND (NOT DEFINED ENV{LAPACK_ROOT}))
@@ -411,8 +411,8 @@ if (HAS_RRTMGP AND HAS_NOAHMP)
 endif ()
 
 target_link_libraries(gmcore fortran_container fortran_datetime fiona flogger ${EXTERNAL_LIBS})
-if (USE_CAM AND HAS_GPTL AND HAS_PIO AND HAS_LAPACK AND HAS_ESMF AND HAS_MCT)
-  message(STATUS "GPTL, PIO, LAPACK, ESMF, and MCT are found. Building CAM physics and chemistry.")
+if (USE_CAM AND HAS_PIO AND HAS_LAPACK AND HAS_ESMF AND HAS_MCT)
+  message(STATUS "PIO, LAPACK, ESMF, and MCT are found. Building CAM physics and chemistry.")
   include_directories(src/physics/cam/include)
   add_definitions(-DSPMD)
   add_definitions(-DUSE_CSM_SHARE)
@@ -432,8 +432,7 @@ if (USE_CAM AND HAS_GPTL AND HAS_PIO AND HAS_LAPACK AND HAS_ESMF AND HAS_MCT)
   add_subdirectory(src/physics/cam)
   add_subdirectory(src/chemistry)
 else ()
-  message(WARNING "GPTL, PIO, LAPACK, ESMF, and MCT are not found. Skipping CAM physics and chemistry.")
-  message(STATUS "HAS_GPTL = ${HAS_GPTL}")
+  message(WARNING "PIO, LAPACK, ESMF, and MCT are not found. Skipping CAM physics and chemistry.")
   message(STATUS "HAS_PIO = ${HAS_PIO}")
   message(STATUS "HAS_LAPACK = ${HAS_LAPACK}")
   message(STATUS "HAS_ESMF = ${HAS_ESMF}")
