--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,13 +83,7 @@ elseif (CMAKE_Fortran_COMPILER_ID STREQUAL "Intel" OR CMAKE_Fortran_COMPILER_ID 
     )
     # FIXME: OpenMP causes sigmentation faults when using ifx compiler.
   endif ()
-  if (CMAKE_Fortran_COMPILER_VERSION GREATER 2021.1)
-    list(APPEND fortran_flags -qmkl=sequential)
-  else ()
-    list(APPEND fortran_flags -mkl=sequential)
-  endif ()
 endif ()
-string(REPLACE ";" " " CMAKE_Fortran_FLAGS "${fortran_flags}")
 
 find_package(MPI)
 
@@ -159,8 +153,13 @@ if (DEFINED ENV{LAPACK_ROOT})
   add_definitions(-DHAS_LAPACK)
   set(HAS_LAPACK TRUE)
   include_directories("$ENV{LAPACK_ROOT}/include")
-  link_directories("$ENV{LAPACK_ROOT}/lib")
-  list(APPEND EXTERNAL_LIBS lapack)
+  if (EXISTS "$ENV{LAPACK_ROOT}/lib")
+    link_directories("$ENV{LAPACK_ROOT}/lib")
+  endif ()
+  if (EXISTS "$ENV{LAPACK_ROOT}/lib64")
+    link_directories("$ENV{LAPACK_ROOT}/lib64")
+  endif ()
+  list(APPEND EXTERNAL_LIBS lapack blas)
 endif ()
 
 if (DEFINED ENV{ESMF} AND (NOT DEFINED ENV{ESMF_ROOT}))
@@ -223,8 +222,16 @@ endif ()
 if (HAS_MKL)
   if (CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
     list(APPEND EXTERNAL_LIBS lapack64)
+  elseif (CMAKE_Fortran_COMPILER_ID STREQUAL "Intel" OR CMAKE_Fortran_COMPILER_ID STREQUAL "IntelLLVM")
+    if (CMAKE_Fortran_COMPILER_VERSION GREATER 2021.1)
+      list(APPEND fortran_flags -qmkl=sequential)
+    else ()
+      list(APPEND fortran_flags -mkl=sequential)
+    endif ()
   endif ()
 endif ()
+
+string(REPLACE ";" " " CMAKE_Fortran_FLAGS "${fortran_flags}")
 
 add_subdirectory(lib/container)
 add_subdirectory(lib/datetime)
