--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -299,6 +299,7 @@ target_sources(gmcore PRIVATE
   src/meshes/latlon/latlon_operators_mod.F90
   src/meshes/latlon/latlon_parallel_types_mod.F90
   src/meshes/latlon/latlon_parallel_zonal_mod.F90
+  src/meshes/latlon/latlon_parallel_global_mod.F90
   src/meshes/latlon/latlon_parallel_mod.F90
   src/meshes/latlon/latlon_decomp_mod.F90
   src/meshes/latlon/latlon_interp_mod.F90
