--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,7 +137,7 @@ endif ()
 if (DEFINED ENV{PIO} AND (NOT DEFINED ENV{PIO_ROOT}))
   set(ENV{PIO_ROOT} $ENV{PIO})
 endif ()
-if (USE_CAM AND DEFINED ENV{PIO_ROOT})
+if (DEFINED ENV{PIO_ROOT})
   message(STATUS "Found PIO in $ENV{PIO_ROOT}.")
   add_definitions(-DHAS_PIO)
   set(HAS_PIO TRUE)
