Add colliding modons test
Currently test the shallow water case.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -363,6 +363,7 @@ target_sources(gmcore PRIVATE
   src/tests/swm/steady_geostrophic_flow_test_mod.F90
   src/tests/swm/vortex_erosion_test_mod.F90
   src/tests/tropical_cyclone_test_mod.F90
+  src/tests/colliding_modons_test_mod.F90
   src/utils/accum_mod.F90
   src/utils/regrid_mod.F90
   src/utils/block_mod.F90
