Add coldair to gomars_v1/nasa

--- a/src/physics/gomars_v1/CMakeLists.txt
+++ b/src/physics/gomars_v1/CMakeLists.txt
@@ -36,5 +36,6 @@ target_sources(gmcore PRIVATE
   nasa/tempgr.F90
   nasa/solarza.F90
   nasa/potemp1.F90
+  nasa/coldair.F90
   nasa/potemp2.F90
 )
