--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -347,6 +347,7 @@ target_sources(gmcore PRIVATE
   src/tests/swm/vortex_erosion_test_mod.F90
   src/tests/tropical_cyclone_test_mod.F90
   src/tests/colliding_modons_test_mod.F90
+  src/tests/supercell_test_mod.F90
   src/utils/accum_mod.F90
   src/utils/regrid_mod.F90
   src/utils/block_mod.F90
