--- a/src/physics/gomars_v1/CMakeLists.txt
+++ b/src/physics/gomars_v1/CMakeLists.txt
@@ -43,5 +43,8 @@ target_sources(gmcore PRIVATE
   nasa/tpindex.F90
   nasa/optcv.F90
   nasa/getdetau.F90
+  nasa/gfluxv.F90
   nasa/sfluxv.F90
+  nasa/dtridgl.F90
+  nasa/dsolver.F90
 )
