--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,12 +57,13 @@ if (CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
     )
   endif ()
   if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-    list(APPEND fortran_flags -O0 -fcheck=all -g -fbacktrace)
+    list(APPEND fortran_flags -O0 -fcheck=all -fno-check-array-temporaries -g -fbacktrace)
   else ()
     list(APPEND fortran_flags -Ofast)
+    if (ENSURE_ORDER)
+      list(APPEND fortran_flags -fcheck=bounds)
+    endif ()
   endif ()
-  # FIXME: OpenMP causes sigmentation faults.
-  # list(APPEND fortran_flags -fopenmp)
 elseif (CMAKE_Fortran_COMPILER_ID STREQUAL "Intel" OR CMAKE_Fortran_COMPILER_ID STREQUAL "IntelLLVM")
   add_definitions(-DFC_IS_INTEL)
   if (CMAKE_BUILD_TYPE STREQUAL "Debug")
